# learning-opengl

./: .gitignore  CMakeLists.txt  glad.c  main.cpp  shader.fs  shader.h  shader.vs
